sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:8: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		if (plusPetit(j+1:Int, j:Int) && a=0)
                                              ^