sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
	var a=0
for (i<- getNombreValeurs()-2 to 0 by -1)
{
	for (j<- 0 to i)
	{
		if (plusPetit(j+1:Int, j:Int) && a=0)
		{
			echange(j:Int, j+1:Int)
		}
		else
		{
			a=1
		}
	}
}
	
}
